--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Lucheto</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+
   <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub lages.</p>
+    <header class="header"></header>
+
+    <footer class="footer"></footer>
+
+    <script src="assets/css/index.js"></script>
   </body>
 </html>
