--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Lucheto</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
 
   <body>
-    <header class="header"></header>
+    <header class="header main">
+      <a class="logo" href="https://lucheto.com">Lucheto</a>
+
+      <nav class="main-nav">
+        <ul>
+          <li><a href="https://lucheto.com/about">About</a></li>
+          <li><a href="https://lucheto.com/portfolio">Portfolio</a></li>
+          <li><a href="https://lucheto.com/contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
     <footer class="footer"></footer>
 
