Cover page ready. Not responsive yet

--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
       </nav>
     </header>
 
+    <section class="main home-main">
+      <div class="info">
+        <h1>
+          Hola, I’m Lucheto <br />
+          A UX/UI designer and Web developer
+        </h1>
+        <p>
+          I like finding creative marketing solutions through typography,
+          motion, and code. I have a strong marketing background but am enamored
+          by the design world.
+        </p>
+
+        <div class="cover"></div>
+        <a href="https://lucheto.com/about" class="read-more">Read more</a>
+      </div>
+      <!-- <img src="assets/img/lucheto.jpg" alt="lucheto" /> -->
+    </section>
+
     <footer class="footer"></footer>
 
     <script src="assets/css/index.js"></script>
