--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Lucheto</title>
+
+    <!--styles  -->
     <link rel="stylesheet" href="assets/css/styles.css" />
+
+    <!-- Motion -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
   </head>
 
   <body>
@@ -41,6 +47,6 @@
 
     <footer class="footer"></footer>
 
-    <script src="assets/css/index.js"></script>
+    <script src="assets/js/app-min.js"></script>
   </body>
 </html>
