Una transicion de barba funcionando

--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
 	<script src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
   </head>
 
-  <body>
+  <body data-barba="wrapper">
 	<header class="header main">
 	  <a class="logo" href="https://lucheto.com">Lucheto</a>
 
 	  <nav class="main-nav">
 		<ul>
-		  <li><a href="https://lucheto.com/about">About</a></li>
+		  <li><a href="/about.html">About</a></li>
 		  <li><a href="https://lucheto.com/portfolio">Portfolio</a></li>
 		  <li><a href="https://lucheto.com/contact">Contact</a></li>
 		</ul>
 	  </nav>
 	</header>
 
+
+<main data-barba="container" data-barba-namespace="home">
 
     <section class="main home-main">
       <div class="info">
@@ -55,6 +57,9 @@
         <li class="project"><a href="">Sonia & Luis</a></li>
       </ul>
     </section>
+
+</main>
+
 
 <footer class="footer">
 	<h3>footer</h3>
