Smotth scrolling al portafolio

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 	  <nav class="main-nav">
 		<ul>
 		  <li><a href="/about.html">About</a></li>
-		  <li><a href="https://lucheto.com/portfolio">Portfolio</a></li>
+		  <li><a href="/#portfolio">Portfolio</a></li>
 		  <li><a href="https://lucheto.com/contact">Contact</a></li>
 		</ul>
 	  </nav>
