--- a/portfolio/muebles-floks.html
+++ b/portfolio/muebles-floks.html
@@ -29,8 +29,15 @@
 	</header>
 
 
-<main class="portfololio">
+<main class="portfolio">
+	<section class="title-image">
+		<h2>Muebles Floks</h2>
 
+	</section>
+
+	<section class="intro">
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet explicabo, autem voluptatibus dolorum numquam omnis! Minima perspiciatis perferendis modi quos, dolore dolores aliquam expedita neque illo consequatur, dicta, laudantium provident!</p>
+	</section>
 </main>
 
 <footer class="footer">
