--- a/portfolio/muebles-floks.html
+++ b/portfolio/muebles-floks.html
@@ -1,49 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Lucheto</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Lucheto</title>
 
-	<!--styles  -->
-	<link rel="stylesheet" href="assets/css/styles.css" />
-	<link rel="stylesheet" href="../assets/css/styles.css" />
+    <!--styles  -->
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
 
-	<!-- Motion -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-	<!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
+    <!-- Motion -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
   </head>
 
   <body data-barba="wrapper">
-	<header class="header main">
-	  <a class="logo" href="/">Lucheto</a>
+    <header class="header main">
+      <a class="logo" href="/">Lucheto</a>
 
-	  <nav class="main-nav">
-		<ul>
-		  <li><a href="/about.html">About</a></li>
-		  <li><a href="/#portfolio-projects">Portfolio</a></li>
-		  <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
-		</ul>
-	  </nav>
-	</header>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/#portfolio-projects">Portfolio</a></li>
+          <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
+        </ul>
+      </nav>
+    </header>
 
+    <main class="portfolio">
+      <section class="title-image">
+        <h2>Muebles Floks</h2>
+      </section>
 
-<main class="portfolio">
-	<section class="title-image">
-		<h2>Muebles Floks</h2>
+      <section class="intro">
+        <p>
+          Muebles Flok's has two services: They sell ready-made furniture and
+          design custom furniture according to the space. Initially, they
+          promoted their services separately, but too much time, money, and
+          effort were spent on marketing without results.
+        </p>
 
-	</section>
+        <p>
+          They wanted to fix their clients' onboarding process as well as
+          minimize their spending on marketing.
+        </p>
 
-	<section class="intro">
-			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet explicabo, autem voluptatibus dolorum numquam omnis! Minima perspiciatis perferendis modi quos, dolore dolores aliquam expedita neque illo consequatur, dicta, laudantium provident!</p>
-	</section>
-</main>
+        <p>
+          They approached me to help them understand their customers and their
+          website's place in the onboarding process. This project aimed to know
+          their customers from &quot;head to toe&quot; and design a website that
+          helped them find the product they were looking for.
+        </p>
 
-<footer class="footer">
-	<h3>footer</h3>
-</footer>
+        <div class="role-team">
+          <div class="role">
+            <h4>Role:</h4>
+            <ul>
+              <li>User Experience Design</li>
+              <li>User Research</li>
+              <li>Information Architecture</li>
+              <li>WordPress Development</li>
+            </ul>
+          </div>
 
-	<script src="assets/js/app-min.js"></script>
+          <div class="team">
+            <h4>Team:</h4>
+            <ul>
+              <li>Luis Martinez (Me)</li>
+              <li>Flok's owners</li>
+            </ul>
+          </div>
+        </div>
+
+        <p>
+          Process: The first step was to interview current customers. Flok's had
+          a well-kept database of their current and past clients. However, they
+          didn't know how or why their customers had chosen their customers
+          Flok's for their projects.
+        </p>
+
+        <p>
+          At the same time, the Flok's' members were unsure of the best path
+          forward - every member had a different opinion on their best product.
+        </p>
+
+        <p>So, we decided we needed to tackle both problems separately.</p>
+
+        <p>
+          First, we needed to understand the business's goals. Although the
+          users' needs and the business's goals go hand in hand, we needed to
+          understand its relationship.
+        </p>
+
+        <p>
+          We conducted a few interviews with the customers and found that most
+          wanted custom furniture but arrived at the webpage after looking at
+          the pre-made models.
+        </p>
+
+        <p>
+          At the same time, custom-made furniture was a better business as
+          Flok's earned more per project than by selling the other models. So,
+          we decided to prioritize bespoke orders.
+        </p>
+
+        <p>
+          However, we could not bury the current models as they still sold well,
+          were responsible for most clientele, and were cheaper to produce.
+        </p>
+
+        <p>
+          We merged the social media accounts and web pages under one umbrella.
+          The merge allowed us better to communicate the relationship of both
+          sections of the business.
+        </p>
+
+        <p>
+          We knew our customers wanted original design - so we designed the
+          homepage for storytelling about the problem of looking for custom
+          design within a set budget and introduced Flok's as a solution.
+        </p>
+
+        <p>
+          I designed the homepage to showcase the signature models while making
+          it clear that custom design was an option.
+        </p>
+
+        <p>
+          Once, we had a design that made sense. So I started developing the
+          custom WordPress theme and used a multistep form to make ordering
+          furniture easier while providing flok's information to quote designs.
+        </p>
+
+        <p>
+          We decided on WordPress as we could leverage WooCommerce with a blog.
+          I developed a custom content strategy where Flok's could communicate
+          better how they are different from the competition.
+        </p>
+
+        <p>
+          Also, as most of the clients of Flok's are buying custom furniture for
+          the first time. The blog helped educate them on the different types of
+          wood, metals, padding, and furniture elements.
+        </p>
+
+        <p>
+          Up until now, the branding had been second a secondary thought. We
+          used the designing/building process of the webpage to define some
+          brand elements. Specially typography and colors.
+        </p>
+
+        <p>
+          I created web elements, like buttons and forms, for the web style
+          guide.
+        </p>
+
+        <p>
+          The site and social media following traffic grew by 40% in the next
+          six months, and Flok's received more custom orders.
+        </p>
+
+        <p>
+          Flok's is looking to grow further. However, they are still far away
+          from competitors like Gaia or Ikea - and even though their offering is
+          different, their target market is the same.
+        </p>
+
+        <p>
+          We've conducted interviews and seen that not all the users understand
+          the storytelling behind Flok's. So, we are looking at ways to make it
+          more prominent and group content to create a better experience.
+        </p>
+
+        <p>
+          We are also looking at other e-commerce platforms because WordPress
+          seems challenging to scale as the site gets more visitors.
+        </p>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <h3>footer</h3>
+    </footer>
+
+    <script src="assets/js/app-min.js"></script>
   </body>
 </html>
