--- a/portfolio/aboga.html
+++ b/portfolio/aboga.html
@@ -33,10 +33,23 @@
 
 </main>
 
-<footer class="footer">
-	<h3>footer</h3>
-</footer>
-
+<div class="main">
+	<footer class="footer">
+			<div class="contact-footer">
+				<h3>Let's create something new</h3>
+				<p><a href="mailto:hola@lucheto.com">hola@lucheto.com</a></p>	
+			</div>
+			
+			<div class="socials">
+				<h3>Socials</h3>
+				<ul>
+					<li><a href="https://www.linkedin.com/in/lucheto-uxui/">Linkedin</a></li>
+					<li><a href="https://hashnode.com/@lucheto">Hashnode</a></li>
+					<li><a href="https://github.com/luchetocsl">Github</a></li>
+				</ul>
+			</div>
+	</footer>
+</div>
 	<script src="assets/js/app-min.js"></script>
   </body>
 </html>
