Added Social Links

--- a/portfolio/muebles-floks.html
+++ b/portfolio/muebles-floks.html
@@ -115,15 +115,16 @@
 			<div class="contact-footer">
 				<h3>Let's create something new</h3>
 				<p><a href="mailto:hola@lucheto.com">hola@lucheto.com</a></p>
-				<p><a href="tel:+52-552623-1118">+ (52) 552623 1118</a></p>	
+				<p><a href="tel:+52-552623-1118">+ (52) 552623 1118</a></p>
 			</div>
-			
+
 			<div class="socials">
 				<h3>Socials</h3>
 				<ul>
-					<li><a href="https://www.linkedin.com/in/lucheto-uxui/">Linkedin</a></li>
-					<li><a href="https://hashnode.com/@lucheto">Hashnode</a></li>
-					<li><a href="https://github.com/luchetocsl">Github</a></li>
+					<li><a href="https://www.linkedin.com/in/lucheto-uxui/"><img src="assets/img/linkedin-woodmark.svg" alt="linkedin logo"></a></li>
+					<li><a href="https://hashnode.com/@lucheto"><img src="assets/img/hashnode-logo.svg" alt="logo hashnode"></a></li>
+					<li><a href="https://github.com/luchetocsl"><img src="assets/img/github-logo.svg" alt="logo github"></a></li>
+					<li><a href="https://www.polywork.com/lucheto"><img src="assets/img/poly-logo-black.svg" alt="logo polyworks"></a></li>
 				</ul>
 			</div>
 	</footer>
