--- a/about.html
+++ b/about.html
@@ -16,13 +16,13 @@
   </head>
 
   <body data-barba="wrapper">
-	<header class="header main">
+	<header class="header container">
 	  <a class="logo" href="/">Lucheto</a>
 
 	  <nav class="main-nav">
 		<ul>
-		  <li><a href="/about.html">About</a></li>
-		  <li><a href="/#portfolio-projects">Portfolio</a></li>
+		  <li><a href="./about.html">About</a></li>
+		  <li><a href="./#portfolio-projects">Portfolio</a></li>
 		  <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
 		</ul>
 	  </nav>
@@ -48,5 +48,12 @@
 
     <p>I am always learning new things. Right now, I'm obsessed with UX processes and JamStack. However, in my free time, I'm learning about crypto and NFTs.</p>
     </div>
+
+
+
+  </section>
+
+  <section class="certs">
+   <a target="_blank" href="https://www.credential.net/bbea73d5-c031-4f83-b6c0-7de86e2837e5"> <img src="https://api.accredible.com/v1/frontend/credential_website_embed_image/badge/41656411" alt="Codeable Certification"></a>
   </section>
 </main>
