--- a/portfolio/aboga.html
+++ b/portfolio/aboga.html
@@ -16,13 +16,13 @@
   </head>
 
   <body data-barba="wrapper">
-	<header class="header main">
+	<header class="header container">
 	  <a class="logo" href="/">Lucheto</a>
 
 	  <nav class="main-nav">
 		<ul>
-		  <li><a href="/about.html">About</a></li>
-		  <li><a href="/#portfolio-projects">Portfolio</a></li>
+		  <li><a href="./about.html">About</a></li>
+		  <li><a href="./#portfolio-projects">Portfolio</a></li>
 		  <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
 		</ul>
 	  </nav>
