Added Floks to portfolio

--- a/portfolio/sonia-luis.html
+++ b/portfolio/sonia-luis.html
@@ -1,57 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Lucheto</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Lucheto</title>
 
-	<!--styles  -->
-	<link rel="stylesheet" href="assets/css/styles.css" />
-	<link rel="stylesheet" href="../assets/css/styles.css" />
+    <!--styles  -->
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
 
-	<!-- Motion -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-	<!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
+    <!-- Motion -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
   </head>
 
   <body data-barba="wrapper">
-	<header class="header container">
-	  <a class="logo" href="/">Lucheto</a>
+    <header class="header container">
+      <a class="logo" href="/">Lucheto</a>
 
-	  <nav class="main-nav">
-		<ul>
-		  <li><a href="./about.html">About</a></li>
-		  <li><a href="./#portfolio-projects">Portfolio</a></li>
-		  <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
-		</ul>
-	  </nav>
-	</header>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="../about.html">About</a></li>
+          <li><a href="../#portfolio-projects">Portfolio</a></li>
+          <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
+        </ul>
+      </nav>
+    </header>
 
+    <main class="portfolio">
+      <section class="title-image">
+        <h2>Muebles Floks</h2>
+      </section>
 
-<main class="portfololio">
+      <section class="role-team">
+        <div>
+          <h4>Role</h4>
+          <ul>
+            <li>User Experience Design</li>
+            <li>Visual Designer</li>
+            <li>Information Architecture</li>
+            <li>Wordpress Development</li>
+          </ul>
+        </div>
+        <div>
+          <h4>Team</h4>
+          <ul>
+            <li>Luis Martinez (Me)</li>
+            <li>Gustavo Rodriguez - Flok's owner</li>
+          </ul>
+        </div>
+        <div>
+          <h4>Client</h4>
+          <ul>
+            <li>Muebles Flok's</li>
+            <li><a href="https://floks.mx/">Live website</a></li>
+          </ul>
+        </div>
+      </section>
+    </main>
 
-</main>
+    <div class="main">
+      <footer class="footer">
+        <div class="contact-footer">
+          <h3>Let's create something new</h3>
+          <p><a href="mailto:hola@lucheto.com">hola@lucheto.com</a></p>
+          <p><a href="tel:+52-552623-1118">+ (52) 552623 1118</a></p>
+        </div>
 
-<div class="main">
-	<footer class="footer">
-			<div class="contact-footer">
-				<h3>Let's create something new</h3>
-				<p><a href="mailto:hola@lucheto.com">hola@lucheto.com</a></p>
-				<p><a href="tel:+52-552623-1118">+ (52) 552623 1118</a></p>
-			</div>
-
-			<div class="socials">
-				<h3>Socials</h3>
-				<ul>
-					<li><a href="https://www.linkedin.com/in/lucheto-uxui/"><img src="assets/img/linkedin-woodmark.svg" alt="linkedin logo"></a></li>
-					<li><a href="https://hashnode.com/@lucheto"><img src="assets/img/hashnode-logo.svg" alt="logo hashnode"></a></li>
-					<li><a href="https://github.com/luchetocsl"><img src="assets/img/github-logo.svg" alt="logo github"></a></li>
-					<li><a href="https://www.polywork.com/lucheto"><img src="assets/img/poly-logo-black.svg" alt="logo polyworks"></a></li>
-				</ul>
-			</div>
-	</footer>
-</div>
-	<script src="assets/js/app-min.js"></script>
+        <div class="socials">
+          <h3>Socials</h3>
+          <ul>
+            <li>
+              <a href="https://www.linkedin.com/in/lucheto-uxui/"
+                ><img
+                  src="../assets/img/linkedin-woodmark.svg"
+                  alt="linkedin logo"
+              /></a>
+            </li>
+            <li>
+              <a href="https://hashnode.com/@lucheto"
+                ><img src="../assets/img/hashnode-logo.svg" alt="logo hashnode"
+              /></a>
+            </li>
+            <li>
+              <a href="https://github.com/luchetocsl"
+                ><img src="../assets/img/github-logo.svg" alt="logo github"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.polywork.com/lucheto"
+                ><img
+                  src="../assets/img/poly-logo-black.svg"
+                  alt="logo polyworks"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+    <script src="../assets/js/app-min.js"></script>
   </body>
 </html>
