--- a/portfolio/aboga.html
+++ b/portfolio/aboga.html
@@ -59,6 +59,10 @@
       </section>
 
       <section class="intro">
+        <img
+          src="../../assets/img/aboga_online/first_image.jpg"
+          alt="Main screen"
+        />
         <h2>The client</h2>
 
         <p>
@@ -116,6 +120,11 @@
           or network to find a job.
         </p>
 
+        <img
+          src="../../assets/img/aboga_online/iphone_mockup.jpg"
+          alt="Iphone Mockup"
+        />
+
         <p>
           The first description of this site was &quot;LinkedIn for
           lawyers.&quot;
@@ -126,6 +135,8 @@
           offline communities in Mexico. So Aboga Online was the first online
           community for lawyers.
         </p>
+
+        <img src="../../assets/img/aboga_online/ipad.jpg" alt="Ipad Mockup" />
 
         <p>
           We decided to focus our research on other established communities. For
@@ -152,6 +163,8 @@
 
         <p>We found there would be four primary users of Aboga Online</p>
 
+        <img src="../../assets/img/aboga_online/users.jpg" alt="Avatars" />
+
         <ul>
           <li>New graduates</li>
           <li>Consolidated lawyers</li>
@@ -164,11 +177,18 @@
           commonalities and designed the main screens.
         </p>
 
+        <img
+          src="../../assets/img/aboga_online/userflow.jpg"
+          alt="User Flows"
+        />
+
         <p>
           I used Figma to design three different homepages with the same content
           but different aesthetics. That way, it was easier for Lorelei to
           choose a look and feel for the rest of the site.
         </p>
+
+        <img src="../../assets/img/aboga_online/mockups-1.jpg" alt="Mockups" />
 
         <p>Once we had a homepage, I could design the other screens.</p>
 
@@ -177,6 +197,11 @@
           users were following the flows as we intended. We used tools like air
           table, carrd, and slack.
         </p>
+
+        <img
+          src="../../assets/img/aboga_online/mockups.jpg"
+          alt="Detailed Mockups"
+        />
 
         <p>
           We realized our job board needed a filtering system. People were
@@ -194,6 +219,11 @@
           coded and completed first.
         </p>
 
+        <img
+          src="../../assets/img/aboga_online/screens.jpg"
+          alt="Different screens"
+        />
+
         <p>
           These changes meant we had to push the due date. However, we should
           save money and streamline the user flows in the long run.
@@ -207,6 +237,11 @@
         </p>
 
         <p>The domain is still registered, but it redirects to a blank page.</p>
+
+        <img
+          src="../../assets/img/aboga_online/start-end.gif"
+          alt="Site animation"
+        />
       </section>
     </main>
 
