--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     <h2>Hi there!</h2>
 
     <p><span class="cta-text">Do you need a designer to bring your ideas to life? <br>
-    Drop me a line at <a href="mailto:hey@lucheto.com"> hey@lucheto.com</a></span></p>
+    Drop me a line at <a href="mailto:hola@lucheto.com"> hola@lucheto.com</a></span></p>
 
     <p class="small available">Available for freelance work</p>
 
