--- a/portfolio/pardela.html
+++ b/portfolio/pardela.html
@@ -60,6 +60,8 @@
       </section>
 
       <section class="intro">
+        <img src="../../assets/img/pardela/main_screen.jpg" alt="Main screen" />
+
         <h2>The client</h2>
 
         <p>
@@ -89,6 +91,8 @@
           because they worked with famous brands and have a solid aesthetic.
         </p>
 
+        <img src="../../assets/img/pardela/low_fi.jpg" alt="Low Fidelity" />
+
         <p>
           Pardela has never needed to promote itself. The quality of their work
           and the contacts they've made have. However, as they grew, they
@@ -104,6 +108,8 @@
 
         <h2>UX audit and research</h2>
 
+        <img src="../../assets/img/pardela/user_flow.jpg" alt="User Flow" />
+
         <p>
           The first step was to apply a UX audit and research to all of
           Pardela's digital real estate. They had signed up for different sites
@@ -117,6 +123,9 @@
         </p>
 
         <h2>UI design and development</h2>
+
+        <img src="../../assets/img/pardela/mockup_1.jpg" alt="Mockups" />
+        <img src="../../assets/img/pardela/mockup_2.jpg" alt="Mockups" />
 
         <p>
           I approached the website as a repository of all the content they have
@@ -135,6 +144,29 @@
           I then coded the website on WordPress, which allowed them to control
           the website.
         </p>
+
+        <div
+          style="
+            position: relative;
+            padding-bottom: 53.624627606752725%;
+            height: 0;
+          "
+        >
+          <iframe
+            src="https://www.loom.com/embed/d2decd9d4e9c47ac84ce37d7086a93c3"
+            frameborder="0"
+            webkitallowfullscreen
+            mozallowfullscreen
+            allowfullscreen
+            style="
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+            "
+          ></iframe>
+        </div>
       </section>
     </main>
 
