Estaba hacia la izquierda la página. Ya no

--- a/portfolio/pardela.html
+++ b/portfolio/pardela.html
@@ -1,214 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Lucheto</title>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<title>Lucheto</title>
 
-    <!--styles  -->
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <link rel="stylesheet" href="../assets/css/styles.css" />
+	<!--styles  -->
+	<link rel="stylesheet" href="assets/css/styles.css" />
+	<link rel="stylesheet" href="../assets/css/styles.css" />
 
-    <!-- Motion -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
+	<!-- Motion -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
   </head>
 
   <body data-barba="wrapper">
-    <header class="header container">
-      <a class="logo" href="/">Lucheto</a>
+	<header class="header container">
+	  <a class="logo" href="/">Lucheto</a>
 
-      <nav class="main-nav">
-        <ul>
-          <li><a href="../about.html">About</a></li>
-          <li><a href="../#portfolio-projects">Portfolio</a></li>
-          <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
-        </ul>
-      </nav>
-    </header>
+	  <nav class="main-nav">
+		<ul>
+		  <li><a href="./about.html">About</a></li>
+		  <li><a href="./#portfolio-projects">Portfolio</a></li>
+		  <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
+		</ul>
+	  </nav>
+	</header>
 
-    <main class="portfolio">
-      <section class="title-image">
-        <h2>Pardela</h2>
-      </section>
 
-      <section class="role-team">
-        <div>
-          <h4>Role</h4>
-          <ul>
-            <li>UX & UI Designer</li>
-            <li>Visual Designer</li>
-            <li>Information Architecture</li>
-            <li>Wordpress Development</li>
-          </ul>
-        </div>
-        <div>
-          <h4>Team</h4>
-          <ul>
-            <li>Luis Martinez (Me)</li>
-            <li>Pardela</li>
-          </ul>
-        </div>
-        <div>
-          <h4>Client</h4>
-          <ul>
-            <li>Pardela</li>
-            <li><a href="https://pardela.mx/">Live website</a></li>
-          </ul>
-        </div>
-      </section>
+<main class="portfololio">
 
-      <section class="intro">
-        <img src="../../assets/img/pardela/main_screen.jpg" alt="Main screen" />
+</main>
 
-        <h2>The client</h2>
+<div class="main">
+	<footer class="footer">
+			<div class="contact-footer">
+				<h3>Let's create something new</h3>
+				<p><a href="mailto:hola@lucheto.com">hola@lucheto.com</a></p>
+				<p><a href="tel:+52-552623-1118">+ (52) 552623 1118</a></p>
+			</div>
 
-        <p>
-          Pardela is a Mexican film production company with offices in
-          Guadalajara and Mexico City. They've worked with Adidas, American
-          Eagle, and Ben Q brands.
-        </p>
-
-        <h2>The challenge</h2>
-
-        <p>
-          In August 2021, Pardela won the opportunity to present its business to
-          different brands, investors, and ad agency owners. Before that moment,
-          Pardela had always pitched their showreel in person.
-        </p>
-
-        <p>
-          Pardela needed a way to showcase their latest projects to a crowd and
-          a way to let their prospects check their work at a later time.
-        </p>
-
-        <h2>The solution</h2>
-
-        <p>
-          Pardela contacted me to create an online portfolio that was easy to
-          manage and update. We decided to focus heavily on their work, mainly
-          because they worked with famous brands and have a solid aesthetic.
-        </p>
-
-        <img src="../../assets/img/pardela/low_fi.jpg" alt="Low Fidelity" />
-
-        <p>
-          Pardela has never needed to promote itself. The quality of their work
-          and the contacts they've made have. However, as they grew, they
-          realized they needed to appear more professional before those who
-          didn't know them.
-        </p>
-
-        <p>
-          When they won the opportunity to showcase their work and pitch to
-          investors and major players, they decided to up the branding to stand
-          out from the rest of the market.
-        </p>
-
-        <h2>UX audit and research</h2>
-
-        <img src="../../assets/img/pardela/user_flow.jpg" alt="User Flow" />
-
-        <p>
-          The first step was to apply a UX audit and research to all of
-          Pardela's digital real estate. They had signed up for different sites
-          like YouTube and Vimeo, but everything was disconnected and branded
-          differently.
-        </p>
-
-        <p>
-          We defined user personas goals and developed user flows to understand
-          the purpose of their website.
-        </p>
-
-        <h2>UI design and development</h2>
-
-        <img src="../../assets/img/pardela/mockup_1.jpg" alt="Mockups" />
-        <img src="../../assets/img/pardela/mockup_2.jpg" alt="Mockups" />
-
-        <p>
-          I approached the website as a repository of all the content they have
-          created. I designed vital screens:
-        </p>
-
-        <ul>
-          <li>Homepage</li>
-          <li>Portfolio Archive</li>
-          <li>Portfolio items</li>
-          <li>Blog</li>
-          <li>Contact</li>
-        </ul>
-
-        <p>
-          I then coded the website on WordPress, which allowed them to control
-          the website.
-        </p>
-
-        <div
-          style="
-            position: relative;
-            padding-bottom: 53.624627606752725%;
-            height: 0;
-          "
-        >
-          <iframe
-            src="https://www.loom.com/embed/d2decd9d4e9c47ac84ce37d7086a93c3"
-            frameborder="0"
-            webkitallowfullscreen
-            mozallowfullscreen
-            allowfullscreen
-            style="
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
-            "
-          ></iframe>
-        </div>
-      </section>
-    </main>
-
-    <div class="main">
-      <footer class="footer">
-        <div class="contact-footer">
-          <h3>Let's create something new</h3>
-          <p><a href="mailto:hola@lucheto.com">hola@lucheto.com</a></p>
-          <p><a href="tel:+52-552623-1118">+ (52) 552623 1118</a></p>
-        </div>
-
-        <div class="socials">
-          <h3>Socials</h3>
-          <ul>
-            <li>
-              <a href="https://www.linkedin.com/in/lucheto-uxui/"
-                ><img
-                  src="../assets/img/linkedin-woodmark.svg"
-                  alt="linkedin logo"
-              /></a>
-            </li>
-            <li>
-              <a href="https://hashnode.com/@lucheto"
-                ><img src="../assets/img/hashnode-logo.svg" alt="logo hashnode"
-              /></a>
-            </li>
-            <li>
-              <a href="https://github.com/luchetocsl"
-                ><img src="../assets/img/github-logo.svg" alt="logo github"
-              /></a>
-            </li>
-            <li>
-              <a href="https://www.polywork.com/lucheto"
-                ><img
-                  src="../assets/img/poly-logo-black.svg"
-                  alt="logo polyworks"
-              /></a>
-            </li>
-          </ul>
-        </div>
-      </footer>
-    </div>
-    <script src="../assets/js/app-min.js"></script>
+			<div class="socials">
+				<h3>Socials</h3>
+				<ul>
+					<li><a href="https://www.linkedin.com/in/lucheto-uxui/"><img src="assets/img/linkedin-woodmark.svg" alt="linkedin logo"></a></li>
+					<li><a href="https://hashnode.com/@lucheto"><img src="assets/img/hashnode-logo.svg" alt="logo hashnode"></a></li>
+					<li><a href="https://github.com/luchetocsl"><img src="assets/img/github-logo.svg" alt="logo github"></a></li>
+					<li><a href="https://www.polywork.com/lucheto"><img src="assets/img/poly-logo-black.svg" alt="logo polyworks"></a></li>
+				</ul>
+			</div>
+	</footer>
+</div>
+	<script src="assets/js/app-min.js"></script>
   </body>
 </html>
