Creo qeu con esto regresa a la verison anterior

--- a/portfolio/aboga.html
+++ b/portfolio/aboga.html
@@ -1,57 +1,289 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Lucheto</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Lucheto</title>
 
-	<!--styles  -->
-	<link rel="stylesheet" href="assets/css/styles.css" />
-	<link rel="stylesheet" href="../assets/css/styles.css" />
+    <!--styles  -->
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
 
-	<!-- Motion -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-	<!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
+    <!-- Motion -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script> -->
   </head>
 
   <body data-barba="wrapper">
-	<header class="header container">
-	  <a class="logo" href="/">Lucheto</a>
+    <header class="header container">
+      <a class="logo" href="/">Lucheto</a>
 
-	  <nav class="main-nav">
-		<ul>
-		  <li><a href="./about.html">About</a></li>
-		  <li><a href="./#portfolio-projects">Portfolio</a></li>
-		  <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
-		</ul>
-	  </nav>
-	</header>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="../about.html">About</a></li>
+          <li><a href="../#portfolio-projects">Portfolio</a></li>
+          <li><a href="https://hashnode.com/@lucheto">Blog</a></li>
+        </ul>
+      </nav>
+    </header>
 
+    <main class="portfolio">
+      <section class="title-image">
+        <h2>Aboga Online</h2>
+      </section>
 
-<main class="portfololio">
+      <section class="role-team">
+        <div>
+          <h4>Role</h4>
+          <ul>
+            <li>User Experience Design</li>
+            <li>Visual Designer</li>
+            <li>Information Architecture</li>
+            <li>No-code developer</li>
+          </ul>
+        </div>
+        <div>
+          <h4>Team</h4>
+          <ul>
+            <li>Luis Martinez (Me)</li>
+            <li>Aboga Online</li>
+          </ul>
+        </div>
+        <div>
+          <h4>Client</h4>
+          <ul>
+            <li>Aboga Online</li>
+          </ul>
+        </div>
+      </section>
 
-</main>
+      <section class="intro">
+        <img
+          src="../../assets/img/aboga_online/first_image.jpg"
+          alt="Main screen"
+        />
+        <h2>The client</h2>
 
-<div class="main">
-	<footer class="footer">
-			<div class="contact-footer">
-				<h3>Let's create something new</h3>
-				<p><a href="mailto:hola@lucheto.com">hola@lucheto.com</a></p>
-				<p><a href="tel:+52-552623-1118">+ (52) 552623 1118</a></p>
-			</div>
+        <p>
+          Aboga Online is a marketplace by and for lawyers. The website serves
+          three purposes:
+        </p>
 
-			<div class="socials">
-				<h3>Socials</h3>
-				<ul>
-					<li><a href="https://www.linkedin.com/in/lucheto-uxui/"><img src="assets/img/linkedin-woodmark.svg" alt="linkedin logo"></a></li>
-					<li><a href="https://hashnode.com/@lucheto"><img src="assets/img/hashnode-logo.svg" alt="logo hashnode"></a></li>
-					<li><a href="https://github.com/luchetocsl"><img src="assets/img/github-logo.svg" alt="logo github"></a></li>
-					<li><a href="https://www.polywork.com/lucheto"><img src="assets/img/poly-logo-black.svg" alt="logo polyworks"></a></li>
-				</ul>
-			</div>
-	</footer>
-</div>
-	<script src="assets/js/app-min.js"></script>
+        <ul>
+          <li>To be able to hire trustworthy, vetted lawyers</li>
+          <li>A place for lawyers to network and solve problems together</li>
+          <li>A hub where lawyers can find the latest news and webinars</li>
+        </ul>
+
+        <h2>The problem</h2>
+
+        <p>
+          I was tasked to design and program the website from the ground up. The
+          major hurdle was to show that Aboga Online is not just another
+          marketplace looking for cheap labor.
+        </p>
+
+        <p>
+          At the same time, we needed to attract lots of lawyers. So the value
+          of Aboga Online depends on the size of its community.
+        </p>
+
+        <h2>The solution</h2>
+
+        <p>I designed a website with three distinct sections:</p>
+
+        <ul>
+          <li>Job Board</li>
+          <li>Community</li>
+          <li>Events</li>
+        </ul>
+
+        <p>We grew to 200 members in the first two months.</p>
+
+        <h2>The Process</h2>
+
+        <p>
+          Most lawyers are specialists, so they rarely dabble in other cases.
+        </p>
+
+        <p>
+          However, this doesn't stop their clients from asking fr other
+          services. Instead, they are obliged to refer them to other lawyers.
+          Lorelei approached me to design a site where lawyers could network and
+          meet lawyers from other disciplines.
+        </p>
+
+        <p>
+          This site should allow consolidated lawyers to create profiles and
+          show off their past work while letting recent graduates find mentors
+          or network to find a job.
+        </p>
+
+        <img
+          src="../../assets/img/aboga_online/iphone_mockup.jpg"
+          alt="Iphone Mockup"
+        />
+
+        <p>
+          The first description of this site was &quot;LinkedIn for
+          lawyers.&quot;
+        </p>
+
+        <p>
+          We looked for communities for lawyers and realized that there are only
+          offline communities in Mexico. So Aboga Online was the first online
+          community for lawyers.
+        </p>
+
+        <img src="../../assets/img/aboga_online/ipad.jpg" alt="Ipad Mockup" />
+
+        <p>
+          We decided to focus our research on other established communities. For
+          example, designers, developers, digital marketing experts, etc., are
+          already running online communities.
+        </p>
+
+        <p>
+          Most communities run either on &quot;circle.so&quot; or slack. We did
+          a trial run with a few test subjects and realized that most lawyers
+          are not tech-savvy enough to use either of these platforms.
+        </p>
+
+        <p>
+          Since the project was financed by investors with specific rules,
+          paying a monthly fee for a saas was an obstacle as they preferred to
+          pay once and forget about it.
+        </p>
+
+        <p>
+          So, we decided the whole platform would have to run on WordPress. This
+          way, we would control every aspect of the platform.
+        </p>
+
+        <p>We found there would be four primary users of Aboga Online</p>
+
+        <img src="../../assets/img/aboga_online/users.jpg" alt="Avatars" />
+
+        <ul>
+          <li>New graduates</li>
+          <li>Consolidated lawyers</li>
+          <li>Freelancers</li>
+          <li>Lawyers looking for online education</li>
+        </ul>
+
+        <p>
+          I created user flows for every type of visitor. This way, I noticed
+          commonalities and designed the main screens.
+        </p>
+
+        <img
+          src="../../assets/img/aboga_online/userflow.jpg"
+          alt="User Flows"
+        />
+
+        <p>
+          I used Figma to design three different homepages with the same content
+          but different aesthetics. That way, it was easier for Lorelei to
+          choose a look and feel for the rest of the site.
+        </p>
+
+        <img src="../../assets/img/aboga_online/mockups-1.jpg" alt="Mockups" />
+
+        <p>Once we had a homepage, I could design the other screens.</p>
+
+        <p>
+          Before coding, we created a no-code version of the site to see if our
+          users were following the flows as we intended. We used tools like air
+          table, carrd, and slack.
+        </p>
+
+        <img
+          src="../../assets/img/aboga_online/mockups.jpg"
+          alt="Detailed Mockups"
+        />
+
+        <p>
+          We realized our job board needed a filtering system. People were
+          posting low-quality jobs, which in turn hurt our reputation.
+        </p>
+
+        <p>
+          Our solution was to make all jobs submitted archived for review
+          instead of automatically publishing on the site.
+        </p>
+
+        <p>
+          It also allowed me to show Lorelei and her investors all the moving
+          pieces of the site. Thus, we prioritized which sections needed to be
+          coded and completed first.
+        </p>
+
+        <img
+          src="../../assets/img/aboga_online/screens.jpg"
+          alt="Different screens"
+        />
+
+        <p>
+          These changes meant we had to push the due date. However, we should
+          save money and streamline the user flows in the long run.
+        </p>
+
+        <p>
+          We launched in March of 2020 and grew to 200 members organically in
+          the next two months. However, it was put on hold when Lorelei, the
+          project owner, became ill and was no longer available to carry out the
+          project.
+        </p>
+
+        <p>The domain is still registered, but it redirects to a blank page.</p>
+
+        <img
+          src="../../assets/img/aboga_online/start-end.gif"
+          alt="Site animation"
+        />
+      </section>
+    </main>
+
+    <div class="main">
+      <footer class="footer">
+        <div class="contact-footer">
+          <h3>Let's create something new</h3>
+          <p><a href="mailto:hola@lucheto.com">hola@lucheto.com</a></p>
+          <p><a href="tel:+52-552623-1118">+ (52) 552623 1118</a></p>
+        </div>
+
+        <div class="socials">
+          <h3>Socials</h3>
+          <ul>
+            <li>
+              <a href="https://www.linkedin.com/in/lucheto-uxui/"
+                ><img
+                  src="../assets/img/linkedin-woodmark.svg"
+                  alt="linkedin logo"
+              /></a>
+            </li>
+            <li>
+              <a href="https://hashnode.com/@lucheto"
+                ><img src="../assets/img/hashnode-logo.svg" alt="logo hashnode"
+              /></a>
+            </li>
+            <li>
+              <a href="https://github.com/luchetocsl"
+                ><img src="../assets/img/github-logo.svg" alt="logo github"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.polywork.com/lucheto"
+                ><img
+                  src="../assets/img/poly-logo-black.svg"
+                  alt="logo polyworks"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+    <script src="../assets/js/app-min.js"></script>
   </body>
 </html>
